stopgap for preventing errors about unresolved colors. something with react-spring not liking hsl maybe?

--- a/packages/sparx/src/components/Checkbox/Checkbox.module.css
+++ b/packages/sparx/src/components/Checkbox/Checkbox.module.css
@@ -17,7 +17,7 @@
 
 .icon {
   display: block;
-  color: var(--control-foreground);
+  color: var(--interactive-normal);
 }
 
 .label {
